Use Z Garbage Collector for reduced latency.